tests/marouter/errors/format/vm/vm_time_end_false/errors.marouter
Error: Broken period definition '0.00 a' (Invalid Number Format no separator).
Quitting (on error).
